# decoSLAM

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  visualization_config.rviz
evaluation/: full_euroc.launch  main.cpp
evaluation/euroc/: full_euroc.launch  launcher_euroc.py
evaluation/euroc/configs/: euroc_stereo.yaml  network_5.yaml
evaluation/euroc/configs/no_sharing/: euroc_config_agent_0.yaml  euroc_config_agent_1.yaml  euroc_config_agent_2.yaml  euroc_config_agent_3.yaml  euroc_config_agent_4.yaml
evaluation/euroc/configs/sharing/: euroc_config_agent_0.yaml  euroc_config_agent_1.yaml  euroc_config_agent_2.yaml  euroc_config_agent_3.yaml  euroc_config_agent_4.yaml
evaluation/euroc/ground_truth/: MH_02_easy.txt  MH_03_medium.txt  MH_04_difficult.txt  MH_05_difficult.txt
include/: global.hpp
include/map/: frame.hpp  graph.hpp  map.hpp  map_point.hpp
include/messages/: alignment_messages.hpp  base.hpp  local_storage_messages.hpp  place_recognition_messages.hpp  serialization.hpp  shared_map_messages.hpp  system_messages.hpp
include/optimization/: bearing_cost.hpp  bundle_adjustment_problem.hpp  euclidean_consensus_cost.hpp  pixel_cost.hpp  pose_parametrization.hpp  se3_consensus_cost.hpp
include/storage/: local_storage.hpp  shared_map.hpp
include/system/: alignment.hpp  communicator.hpp  local_mapping.hpp  local_tracking.hpp  optimizer.hpp  place_recognition.hpp  system.hpp
include/utils/: common.hpp  detection.hpp  matching.hpp  processing.hpp  ransac.hpp  timer.hpp  triangulation.hpp
include/visualization/: helpers.hpp  visualizer.hpp
resources/vocabularies/: netvlad_vocabulary_10.csv  netvlad_vocabulary_100.csv
src/: global.cpp  main.cpp
src/map/: frame.cpp  graph.cpp  map.cpp  map_point.cpp
src/optimization/: bearing_cost.cpp  bundle_adjustment_problem.cpp  pixel_cost.cpp  se3_consensus_cost.cpp
src/storage/: local_storage.cpp  shared_map.cpp
src/system/: alignment.cpp  communicator.cpp  local_mapping.cpp  local_tracking.cpp  optimizer.cpp  place_recognition.cpp  system.cpp
src/utils/: common.cpp  matching.cpp  ransac.cpp  timer.cpp  triangulation.cpp
src/visualization/: helpers.cpp  visualizer.cpp
test/: CMakeLists.txt  main.cpp  serialization_tests.cpp
